@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:35:36 brook Exp $
+
+R_PKGNAME=	rprojroot
+R_PKGVER=	1.3-2
+CATEGORIES=	devel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Finding files in project subdirectories
+LICENSE=	gnu-gpl-v3
+
+DEPENDS+=	R-backports>=1.1.4:../../math/R-backports
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
