@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:35:36 brook Exp $
+
+SHA1 (R/rprojroot_1.3-2.tar.gz) = 5e6069920ce7a19fef6812685b0d0907a9884631
+RMD160 (R/rprojroot_1.3-2.tar.gz) = 1a8ec1bcddd7f925ba735c1b533d0fd94529ebb7
+SHA512 (R/rprojroot_1.3-2.tar.gz) = 7ea312a39ccf297a83155c849b0399459eb767f869fb327a238258e0f7a69b545c29e005dd33fdc1c1895116554ad0c3efbcc098ca1979610887ce67d8a8ea4b
+Size (R/rprojroot_1.3-2.tar.gz) = 50414 bytes
