@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3351 2019/08/09 18:34:34 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3352 2019/08/09 18:35:36 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5474,3 +5474,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added textproc/R-brew version 1.0.6 [brook 2019-08-09]
 	Added devel/R-remotes version 2.1.0 [brook 2019-08-09]
 	Added devel/R-sessioninfo version 1.1.1 [brook 2019-08-09]
+	Added devel/R-rprojroot version 1.3.2 [brook 2019-08-09]
